[package]
name = "learn"
version = "0.1.0"
edition = "2021"
authors = ["akash2061 <aakashsoni8781@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
reqwest = {version = "0.11", features = ["blocking","json"]}
